2002-02-19  Mike Kestner <mkestner@speakeasy.net>

	* generator/Statistics.cs : New. Gathers stats about generation.
	* generator/*.cs : Hook in the stat counters.

2002-02-18  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructBase.cs (GenCtor): StudCapsify static method names.
	* generator/SymbolTable.cs (Trim): strip const- prefix.
	* sample/ButtonApp.cs (Window_delete): handle RetVal.

2002-02-17  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructBase.cs (MangleName): add object and event.
	* parser/gapi2xml.pl : Handle embedded callback declarations in method
	  parameter lists.

2002-02-15  Mike Kestner <mkestner@speakeasy.net>

	* generator/SignalHandler.cs : Create the SignalArgs.Args array and fix
	  indexing into it.
	* sample/ButtonApp.cs : A little cleanup.  Not quite there yet.
	* sample/HelloWorld.cs : Set up the RetVal in the delete handler.
	  
2002-02-14  Mike Kestner <mkestner@speakeasy.net>

	* generator/ObjectGen.cs : suppress generation of get/set methods when
	  properties exist. Mangle method names on signal name clashes.  Gen
	  the signals.
	* generator/SymbolTable.cs : Add GetName. Add some more calls to Trim.
	* generator/gtkapi.xml : adding binary file as an experiment.  If the
	  diff's show this file, I'll be removing it with apologies and going
	  back to the separate package idea.
	* parser/gapi2xml.pl : some signal related fixes.
	* sample/HelloWorld.cs : uncomment the event hook.

2002-02-10  Mike Kestner <mkestner@speakeasy.net>

	* generator/BoxedGen.cs (FromNative): Add explicit cast.
	* generator/ObjectGen.cs (FromNative): Add explicit cast.
	(GenSignal): New.  Partial.  Not hooked in yet.
	* generator/StructBase.cs (GenMethod): return-type is a sub-element,
	  not an attribute.

2002-02-09  Mike Kestner <mkestner@speakeasy.net>

	* generator/StructBase.cs (GenMethod): Add handle arg to paramless
	  method call and extern.

2002-02-08  Mike Kestner <mkestner@speakeasy.net>

	* README : Some updates.