@@ -1,5 +1,12 @@
 2002-02-19  Mike Kestner <mkestner@speakeasy.net>
 
+	* generator/BoxedGen.cs : Add ctor and method generation.
+	* generator/StructBase.cs : Switch to Raw syntax.
+	* glib/Boxed.cs : Add Handle prop, make Raw protected, and add ctors.
+	* glib/Object.cs : s/RawObject/Raw to simplify generation.
+
+2002-02-19  Mike Kestner <mkestner@speakeasy.net>
+
 	* generator/Statistics.cs : New. Gathers stats about generation.
 	* generator/*.cs : Hook in the stat counters.
 
